Change token secret.

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+api.token.secret=${JWT_SECRET:my-secret-key}
