--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 api.token.secret=${JWT_SECRET:my-secret-key}
+rabbitmq.queue.name=${QUEUE_NAME:orderQueue}
+rabbitmq.exchange.name=${EXCHANGE_NAME:orderExchange}
+rabbitmq.routing.key=${ROUTING_KEY:order_routing_key}
