--- a/product-service/src/main/resources/application-docker.properties
+++ b/product-service/src/main/resources/application-docker.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/desafio_java
+spring.datasource.url=jdbc:mysql://mysqldb:3306/desafio_java
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.defer-datasource-initialization=true
@@ -13,5 +13,4 @@ api.token.secret=${JWT_SECRET:my-secret-key}
 rabbitmq.queue.name=${QUEUE_NAME:orderQueue}
 rabbitmq.exchange.name=${EXCHANGE_NAME:orderExchange}
 rabbitmq.routing.key=${ROUTING_KEY:orderRoutingKey}
-
-spring.profiles.active=docker
+spring.rabbitmq.host=rabbitmq
